src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDP1__ActivityDate__c</fullName>
        <label>Eloqua Discover Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__ActivityType__c</fullName>
        <label>Eloqua Discover Activity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__ActivityURL__c</fullName>
        <label>Eloqua Discover Activity URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EDP1__AssetName__c</fullName>
        <label>Eloqua Discover Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__AssetType__c</fullName>
        <label>Eloqua Discover Asset Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__Asset__c</fullName>
        <label>Eloqua Discover Asset</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__Description__c</fullName>
        <label>Eloqua Discover Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EDP1__ErrorText__c</fullName>
        <label>Eloqua Discover Error Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__IsError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eloqua Discover Is Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDP1__IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eloqua Discover Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDP1__OwnerId__c</fullName>
        <externalId>true</externalId>
        <label>Eloqua Discover Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__ProspectId__c</fullName>
        <externalId>true</externalId>
        <label>Eloqua Discover Prospect Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__SortKey__c</fullName>
        <externalId>true</externalId>
        <label>Eloqua Discover Sort Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPSM__c</fullName>
        <formula>Owner:User.RPSM_New__r.FirstName &amp; &quot; &quot; &amp; Owner:User.RPSM_New__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RVP__c</fullName>
        <formula>Owner:User.RVP__r.FirstName &amp; &quot; &quot; &amp; Owner:User.RVP__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RVP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Lead_Status__c</fullName>
        <label>Update Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Update</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to make contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified In-store Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified - Deleted (Non-Paint)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified Nurture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>